--- a/apps/admin/index.html
+++ b/apps/admin/index.html
@@ -9,16 +9,16 @@
 
   <link rel="apple-touch-icon" href="/favicon.png" />
   <meta name="description" content="Admin Dashboard" />
-  <meta property="og:title" content="Neo - Admin Dashboard" />
+  <meta property="og:title" content="Adi - Admin Dashboard" />
   <meta property="og:type" content="eCommerce Website" />
-  <meta property="og:url" content="https://Neo-admin.vercel.app" />
+  <meta property="og:url" content="https://Adi-admin.vercel.app" />
   <meta property="og:image"
-    content="https://res.cloudinary.com/ahossain/image/upload/v1636572997/Neo-admin_ijlexj.png" />
+    content="https://res.cloudinary.com/ahossain/image/upload/v1636572997/Adi-admin_ijlexj.png" />
 
   <link rel="manifest" href="/manifest.json" />
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
-  <title>Neo | Admin Dashboard</title>
+  <title>Adi | Admin Dashboard</title>
 </head>
 
 <body class="antialiased">
